objects/Programme_Version__c.object
<CustomObject><fields>
        <fullName>Academic_Credits__c</fullName>
        <label>Academic Credits</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Academic_Requirements__c</fullName>
        <label>Academic Requirements</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Academic_Year__c</fullName>
        <description>For Version level records</description>
        <label>Academic Year</label>
        <picklist>
            <picklistValues>
                <fullName>14/15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16/17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17/18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18/19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19/20</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Accreditation_Status__c</fullName>
        <description>Status of Professional, Statutory or Regulatory Body Accreditation</description>
        <inlineHelpText>Status of Professional, Statutory or Regulatory Body Accreditation</inlineHelpText>
        <label>Accreditation Status</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Additional_Costs__c</fullName>
        <description>Additional Costs to the Student</description>
        <inlineHelpText>Additional Costs to the Student</inlineHelpText>
        <label>Additional Costs</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Aims_of_Programme__c</fullName>
        <label>Aims of Programme</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Alternative_Qualification__c</fullName>
        <description>Criteria for the award of an alternative Qualification</description>
        <inlineHelpText>Criteria for the award of an alternative Qualification</inlineHelpText>
        <label>Alternative Qualification</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Applicable_Framework__c</fullName>
        <label>Applicable Framework</label>
        <picklist>
            <picklistValues>
                <fullName>UoL Framework for FT or PT Postgraduate Programmes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LSTM Regulations</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Application_Form_Type__c</fullName>
        <inlineHelpText>Help text to set by LSTM</inlineHelpText>
        <label>Application Form Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Short+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FormAssembly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Stage</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Programme Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L&amp;TC Initial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Committee Initial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QMC Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L&amp;TC Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Committee Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Assessment_Schedule__c</fullName>
        <label>Assessment Schedule</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Assessment_Strategy__c</fullName>
        <label>Assessment Strategy</label>
        <length>2048</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Board_of_Examiners__c</fullName>
        <label>Board of Examiners</label>
        <picklist>
            <picklistValues>
                <fullName>Masters Board of Examiners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>tbc</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Board_of_Studies__c</fullName>
        <label>Board of Studies</label>
        <picklist>
            <picklistValues>
                <fullName>Clinical Masters Board of Studies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tropical Disease Biology Masters Board of Studies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Humanitarian Board of Studies</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Career_Opportunities__c</fullName>
        <label>Career Opportunities</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Code__c</fullName>
        <inlineHelpText>Internal LSTM programme code</inlineHelpText>
        <label>Code</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Compensation_Resits__c</fullName>
        <label>Compensation &amp; Resits</label>
        <length>4094</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Count_of_Aims__c</fullName>
        <description>Hidden field, used for Aim numbering</description>
        <label>Count of Aims</label>
        <summaryForeignKey>Programme_Aim__c.Programme_Version__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Count_of_OutcomesA__c</fullName>
        <description>Hidden</description>
        <label>Count of Outcomes A</label>
        <summaryFilterItems>
            <field>Learning_Outcome__c.Type__c</field>
            <operation>equals</operation>
            <value>A</value>
        </summaryFilterItems>
        <summaryForeignKey>Learning_Outcome__c.Programme_Version__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Count_of_Outcomes_B__c</fullName>
        <description>Hidden</description>
        <label>Count of Outcomes B</label>
        <summaryFilterItems>
            <field>Learning_Outcome__c.Type__c</field>
            <operation>equals</operation>
            <value>B</value>
        </summaryFilterItems>
        <summaryForeignKey>Learning_Outcome__c.Programme_Version__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Count_of_Outcomes_C__c</fullName>
        <label>Count of Outcomes C</label>
        <summaryFilterItems>
            <field>Learning_Outcome__c.Type__c</field>
            <operation>equals</operation>
            <value>C</value>
        </summaryFilterItems>
        <summaryForeignKey>Learning_Outcome__c.Programme_Version__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Count_of_Skills__c</fullName>
        <label>Count of Skills</label>
        <summaryForeignKey>Skills_Attributes__c.Programme_Version__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Date_Exemption_Approved_by_QMC__c</fullName>
        <label>Date Exemption Approved by QMC</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Details_of_Exemption__c</fullName>
        <inlineHelpText>Please provide a brief summary why a framework exemption is being requested</inlineHelpText>
        <label>Details of Exemption</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Director_of_Studies__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Director must be a User in system, not a Contact</inlineHelpText>
        <label>Director of Studies</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programme_Versions</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Diversity_Statement__c</fullName>
        <defaultValue>"The programme’s design, structure and content are consistent and compliant with the University’s Diversity and Equality of Opportunity Policy. LSTM provides a multicultural, multidisciplinary learning environment in which all students benefit from the opportunity to share diverse experiences and outlooks, supported by staff who are themselves from a variety of national and cultural backgrounds and spend significant periods of time working overseas. LSTM recognises that some students need extra help and guidance in adjusting to a new country, culture or learning environment.  Accordingly, we provide a comprehensive range of relevant non-academic student support services.  The Personal Tutor System aims to provide students with advice and support in matters related to academic work and to enable the development of independent study habits suitable for higher education. Reasonable adjustments are made to assessment for disabled students in line with University of Liverpool regulations (Code of Practice on Assessment 2012-13: Appendix K)."</defaultValue>
        <description>Diversity &amp; Equality of Opportunity and Widening Participation</description>
        <inlineHelpText>Diversity &amp; Equality of Opportunity and Widening Participation</inlineHelpText>
        <label>Diversity Statement</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>English_Language_Requirements__c</fullName>
        <defaultValue>"The programme is taught in English. Students whose first language is not English must provide evidence of an IELTS (International English Language Testing System) score of at least 6.5 with a minimum of 5.5 in all learning components, or a TOEFL (Test of English as a Foreign Language) score of at least 88 for the Internet-based Test (iBT), with minimum scores of 21 for Listening and Writing, 22 for Reading and 23 for Speaking.  Tests should be within their validity period of 2 years"</defaultValue>
        <label>English Language Requirements</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Entry_Award_1_Credit__c</fullName>
        <label>Entry Award 1 Credit</label>
        <picklist>
            <picklistValues>
                <fullName>180 Credits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120 Credits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 Credits</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Entry_Award_1_Level__c</fullName>
        <label>Entry Award 1 Level</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Entry_Award_1__c</fullName>
        <globalPicklist>Entry_Exit_Awards</globalPicklist>
        <label>Entry Award 1</label>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Entry_Award_2_Credit__c</fullName>
        <label>Entry Award 2 Credit</label>
        <picklist>
            <picklistValues>
                <fullName>180 Credits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120 Credits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 Credits</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Entry_Award_2_Level__c</fullName>
        <label>Entry Award 2 Level</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Entry_Award_2__c</fullName>
        <globalPicklist>Entry_Exit_Awards</globalPicklist>
        <label>Entry Award 2</label>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Entry_Award_3_Credit__c</fullName>
        <label>Entry Award 3 Credit</label>
        <picklist>
            <picklistValues>
                <fullName>180 Credits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120 Credits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 Credits</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Entry_Award_3_Level__c</fullName>
        <label>Entry Award 3 Level</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Entry_Award_3__c</fullName>
        <globalPicklist>Entry_Exit_Awards</globalPicklist>
        <label>Entry Award 3</label>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Examining__c</fullName>
        <description>The Board of Examiners and the External Examiner</description>
        <inlineHelpText>The Board of Examiners and the External Examiner</inlineHelpText>
        <label>Examining</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Exit_Award_1_Credit__c</fullName>
        <label>Exit Award 1 Credit</label>
        <picklist>
            <picklistValues>
                <fullName>180 Credits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120 Credits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 Credits</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Exit_Award_1_Level__c</fullName>
        <label>Exit Award 1 Level</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Exit_Award_1__c</fullName>
        <globalPicklist>Entry_Exit_Awards</globalPicklist>
        <label>Exit Award 1</label>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Exit_Award_2_Credit__c</fullName>
        <label>Exit Award 2 Credit</label>
        <picklist>
            <picklistValues>
                <fullName>180 Credits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120 Credits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 Credits</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Exit_Award_2_Level__c</fullName>
        <label>Exit Award 2 Level</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Exit_Award_2__c</fullName>
        <globalPicklist>Entry_Exit_Awards</globalPicklist>
        <label>Exit Award 2</label>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Exit_Award_3_Credit__c</fullName>
        <label>Exit Award 3 Credit</label>
        <picklist>
            <picklistValues>
                <fullName>180 Credits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120 Credits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 Credits</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Exit_Award_3_Level__c</fullName>
        <label>Exit Award 3 Level</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Exit_Award_3__c</fullName>
        <globalPicklist>Entry_Exit_Awards</globalPicklist>
        <label>Exit Award 3</label>
        <type>Picklist</type>
    </fields><fields>
        <fullName>External_Examiners__c</fullName>
        <label>External Examiners</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Final_Award__c</fullName>
        <label>Final Award</label>
        <length>15000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>For_website__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for reports that exported and sent to website agency</description>
        <inlineHelpText>Denotes this Version information should be sent to website</inlineHelpText>
        <label>For website</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Framework_Exemption_Summary__c</fullName>
        <inlineHelpText>Please provide a brief summary why a framework exemption is being requested</inlineHelpText>
        <label>Framework Exemption Summary</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Framework_Exemption_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Framework Exemption required</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Frequency_of_Intake__c</fullName>
        <label>Frequency of Intake</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Grading_Scheme__c</fullName>
        <label>Grading Scheme</label>
        <length>250</length>
        <type>Text</type>
    </fields><fields>
        <fullName>HESA_Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only display for Master record type</description>
        <inlineHelpText>Defines whether child instance records are carried in XML output for HESA audit - should include all MSc programmes, DTM&amp;H and DTN</inlineHelpText>
        <label>HESA Audit</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Home_EU_Fee__c</fullName>
        <label>Home EU Fee</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Homepage_VLE_ID__c</fullName>
        <description>Program Homepage VLE ID</description>
        <label>Homepage VLE ID</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Important_Dates__c</fullName>
        <label>Important Dates</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Introduction__c</fullName>
        <label>Introduction</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>JAC_Code_Label__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links to HESA Code object, with filter on Subject Record type
Optional use of active flag to exclude Subjects not used</description>
        <inlineHelpText>Used for HESA XML output report</inlineHelpText>
        <label>JAC Code Label</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>HESA_Code__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Subjects</value>
            </filterItems>
            <filterItems>
                <field>HESA_Code__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>HESA_Code__c</referenceTo>
        <relationshipLabel>Programme Versions</relationshipLabel>
        <relationshipName>Programme_Versions</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>JAC_Code__c</fullName>
        <formula>JAC_Code_Label__r.HESA_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>HESA Code related to subject choosen in JAC Code Label field</inlineHelpText>
        <label>JAC Code</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Key_Contacts__c</fullName>
        <label>Key Contacts</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>LT_A_Strategies__c</fullName>
        <label>LT&amp;A Strategy</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>LT_Methods__c</fullName>
        <label>L&amp;T Methods</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>L_T_Strategy__c</fullName>
        <label>L&amp;T Strategy</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Learning_Outcome_Notes__c</fullName>
        <inlineHelpText>If required for PDF ouput</inlineHelpText>
        <label>Learning Outcome Notes</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>LSTM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WITS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Marking_Descriptors__c</fullName>
        <label>Marking Descriptors</label>
        <length>2048</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Master_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To allow two levels of versions - master or senior, and child versions. Will provide external systems with a persistent ID across all Programmes and Programme Versions of same group</description>
        <label>Master Link</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Record must be a master</errorMessage>
            <filterItems>
                <field>Programme_Version__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Master Version</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Programme_Version__c</referenceTo>
        <relationshipLabel>Child Programme Versions</relationshipLabel>
        <relationshipName>Programme_Versions</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Mode__c</fullName>
        <label>Mode of Study</label>
        <picklist>
            <picklistValues>
                <fullName>FT</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>PT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Modular_Structure__c</fullName>
        <inlineHelpText>This is Table 3 in paper specification</inlineHelpText>
        <label>Modular Structure</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Modules_Included__c</fullName>
        <inlineHelpText>This is Table 1 in paper specification</inlineHelpText>
        <label>Modules Included</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Options__c</fullName>
        <inlineHelpText>This is Table 2 in paper specification</inlineHelpText>
        <label>Options</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Other_Requirements__c</fullName>
        <label>Other Requirements</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Overseas_Fee__c</fullName>
        <label>Overseas Fee</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Overview__c</fullName>
        <label>Overview</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>PGR_Type__c</fullName>
        <label>PGR Type</label>
        <picklist>
            <controllingField>Programme_Type__c</controllingField>
            <picklistValues>
                <fullName>PhD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPhil</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Pass_Mark__c</fullName>
        <label>Pass Mark</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Pre_requisites__c</fullName>
        <inlineHelpText>Free text field</inlineHelpText>
        <label>Pre-requisites</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Prizes__c</fullName>
        <label>Prizes</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Professional_or_Other_Body__c</fullName>
        <description>Professional, Statutory or Regulatory body</description>
        <inlineHelpText>Professional, Statutory or Regulatory body</inlineHelpText>
        <label>Professional or Other Body</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Programme_Aims_Notes__c</fullName>
        <inlineHelpText>If note is required for PDF output</inlineHelpText>
        <label>Programme Aims Notes</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Programme_Group__c</fullName>
        <label>Programme Group</label>
        <picklist>
            <picklistValues>
                <fullName>Clinical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Humanitarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laboratory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maternal &amp; Child Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning, Management &amp; Personal Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Health &amp; Humanitarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sexual &amp; Reproductive Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel Health Courses</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Programme_Overview__c</fullName>
        <label>Programme Overview</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Programme_Structure__c</fullName>
        <label>Programme Structure</label>
        <length>3072</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Programme_Type_External__c</fullName>
        <description>Set at Master record type</description>
        <inlineHelpText>Used to combine Programme Type of Masters Module and (standalone) Short Courses, under External Type of of Short Courses; for display in MyLSTM Application form</inlineHelpText>
        <label>Programme Type External</label>
        <picklist>
            <picklistValues>
                <fullName>MSc Programme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Programme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short Course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Programme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Programme_Type__c</fullName>
        <label>Programme Type</label>
        <picklist>
            <picklistValues>
                <fullName>MSc Programme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Diploma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Masters Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short Course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PG Cert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Course</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Programme_Version_Ref__c</fullName>
        <description>Custom ID ref field for external for VLE integration</description>
        <displayFormat>PV-{00000000}</displayFormat>
        <externalId>true</externalId>
        <label>Programme Version Ref</label>
        <type>AutoNumber</type>
    </fields><fields>
        <fullName>Recognition_of_Prior_Learning__c</fullName>
        <defaultValue>"All programmes of study will permit entry with credit attributed to previous certificated study up to a total of one third of the credits required to be awarded a Master’s Degree, Postgraduate Diploma or Postgraduate Certificate."</defaultValue>
        <label>Recognition of Prior Learning</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Reference_Points__c</fullName>
        <label>Reference Points</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Research_Project__c</fullName>
        <label>Research Project</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Semester_Timetable__c</fullName>
        <inlineHelpText>This is Table 2 in paper specification</inlineHelpText>
        <label>Semester Timetable</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>Date of first Intake</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Student_Representation__c</fullName>
        <description>Student representation and feedback</description>
        <inlineHelpText>Student representation and feedback</inlineHelpText>
        <label>Student Representation</label>
        <length>10000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Template_to_Use__c</fullName>
        <description>Returns the ID of the Conga Template (CMT) based on Code name</description>
        <formula>IF( Code__c ="MSC/HS", "a0p2000000PTvMa", "a0p2000000PTvMf")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Template to Use</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Timetable__c</fullName>
        <inlineHelpText>This is Table 1 in paper specification</inlineHelpText>
        <label>Timetable</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Version_Suffix__c</fullName>
        <description>To differentiate between Programme Versions, added to Master name</description>
        <label>Version Suffix</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Work_Experience__c</fullName>
        <label>Work Experience</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Work_Placement__c</fullName>
        <label>Work Placement</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>XEntry_Award_1__c</fullName>
        <label>XEntry Award 1</label>
        <picklist>
            <picklistValues>
                <fullName>MSc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGDip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGCert</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>    </recordTypes></CustomObject>